# visualq-vrai

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval/: run_eval.py
fixtures/: generate_synthetic.py
fixtures/bundles/: synthetic-0000.json  synthetic-0001.json  synthetic-0002.json  synthetic-0003.json  synthetic-0004.json  synthetic-0005.json  synthetic-0006.json  synthetic-0007.json  synthetic-0008.json  synthetic-0009.json  synthetic-0010.json  synthetic-0011.json  synthetic-0012.json  synthetic-0013.json  synthetic-0014.json  synthetic-0015.json  synthetic-0016.json  synthetic-0017.json  synthetic-0018.json  synthetic-0019.json  synthetic-0020.json  synthetic-0021.json  synthetic-0022.json  synthetic-0023.json  synthetic-0024.json  synthetic-0025.json  synthetic-0026.json  synthetic-0027.json  synthetic-0028.json  synthetic-0029.json  synthetic-0030.json  synthetic-0031.json  synthetic-0032.json  synthetic-0033.json  synthetic-0034.json  synthetic-0035.json  synthetic-0036.json  synthetic-0037.json  synthetic-0038.json  synthetic-0039.json  (+320 more)
fixtures/export-samples/: exported-sample.json
schema/: diff-bundle.v1.json
scripts/: export_json_schema.py
src/visualq_vrai/: __init__.py
src/visualq_vrai/cli/: demo.py
src/visualq_vrai/eval/: __init__.py  harness.py
src/visualq_vrai/features/: __init__.py  extract.py  perceptual.py  spatial.py
src/visualq_vrai/heuristic/: __init__.py  triage.py
src/visualq_vrai/schema/: __init__.py  bundle.py
src/visualq_vrai/service/: app.py  conformal.py  predict.py
src/visualq_vrai/ui/: __init__.py  routes.py  store.py
src/vrt_triage/: __init__.py
tests/: test_ablation.py  test_conformal_coverage.py  test_eval.py  test_eval_gates.py  test_export_roundtrip.py  test_features.py  test_heuristic.py  test_perceptual.py  test_schema.py  test_schema_drift.py  test_service.py  test_spatial_recurrence.py  test_tabicl_integration.py  test_ui.py
(+15 files in other folders)
